--- a/kitty/kitty-colors.conf
+++ b/kitty/kitty-colors.conf
@@ -1,3 +1,5 @@
+ # /* ---- Credits for: https://github.com/JaKooLit ---- */  #
+
 foreground         #FBECD3
 background         #0E0E0F
 cursor             #FBECD3
